terraform/policies/allowed-replica-limit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-max-replicas
spec:
  validationFailureAction: enforce
  rules:
    - name: enforce-max-replicas
      match:
        resources:
          kinds:
            - Deployment
            - StatefulSet
            - ReplicaSet
      namespaceSelector:
        matchNames:
          - prod
          - dev
      validate:
        message: "The number of replicas must not exceed 6."
        pattern:
          spec:
            replicas: "<=6"
