terraform/policies/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: enforce
  rules:
    - name: disallow-privileged-containers
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - ReplicaSet
      namespaceSelector:
        matchNames:
          - prod
          - dev
      validate:
        message: "Privileged containers are not allowed in the 'prod' and 'dev' namespaces."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
